# internet-radio-web-client-rs

./: Cargo.toml  Dockerfile.build  README.md  index.css  index.html
src/: debug_view.rs  fast_eq_rc.rs  main.rs  player.rs  player_state_view.rs  podcasts.rs  podcasts_view.rs  track_position_slider.rs  update_from_diff.rs
style/: debug.scss  index.scss  player-state.scss  podcasts.scss
