[package]
name = "internet-radio-web-client-rs"
version = "0.10.4"
authors = [ "Samuel Hicks <SamMHicks@hotmail.co.uk>" ]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.70"
console_error_panic_hook = "0.1.7"
dioxus = "0.3.2"
dioxus-web = "0.3.1"
futures-util = { version = "0.3.28", features = [ "sink" ] }
gloo-dialogs = "0.1.1"
gloo-net = { version = "0.2.6", features = [ "http", "websocket" ] }
gloo-storage = "0.2.2"
gloo-timers = { version = "0.2.6", features = [ "futures" ] }
gloo-utils = "0.1.6"
rradio-messages = { git = "https://github.com/sammhicks/internet-radio-rs" }
rss = "2.0.3"
serde = { version = "1.0.160", features = [ "derive" ] }
tracing = "0.1.37"
tracing-wasm = "0.2.1"
urlencoding = "2.1.2"
web-sys = "0.3.61"
