[package]
name = "internet-radio-web-client-rs"
version = "0.11.1"
authors = [ "Samuel Hicks <SamMHicks@hotmail.co.uk>" ]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.75"
console_error_panic_hook = "0.1.7"
dioxus = "0.4.0"
dioxus-web = "0.4.0"
futures-util = { version = "0.3.29", features = [ "sink" ] }
gloo-dialogs = "0.2.0"
gloo-net = { version = "0.5.0", features = [ "http", "websocket" ] }
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features = [ "futures" ] }
gloo-utils = "0.2.0"
rradio-messages = { git = "https://github.com/sammhicks/internet-radio-rs" }
rss = "2.0.6"
serde = { version = "1.0.192", features = [ "derive" ] }
tracing = "0.1.40"
tracing-wasm = "0.2.1"
urlencoding = "2.1.3"
web-sys = "0.3.65"
