[package]
name = "internet-radio-web-client-rs"
version = "0.11.1"
authors = [ "Samuel Hicks <SamMHicks@hotmail.co.uk>" ]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.75"
dioxus = { version = "0.6.0", features = ["web"] }
futures-util = { version = "0.3.29", features = [ "sink" ] }
gloo-dialogs = "0.2.0"
gloo-net = { version = "0.6.0", features = [ "http", "websocket" ] }
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features = [ "futures" ] }
gloo-utils = "0.2.0"
rradio-messages = { git = "https://github.com/sammhicks/internet-radio-rs" }
rss = "2.0.6"
serde = { version = "1.0.192", features = [ "derive" ] }
thiserror = "2.0.6"
urlencoding = "2.1.3"
web-sys = "0.3.65"
